[gd_scene load_steps=5 format=2]

[ext_resource path="res://Checkpoints.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 120, 200 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 440, 80 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 80, 400 )

[node name="Checkpoints" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -240, 760 )
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 880, 80 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -440, 800 )
shape = SubResource( 2 )

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2( 880, 80 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 1720, 1400 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_Area2D3_body_entered"]
